--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unblocked Games Site</title>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f4f6;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background: #4A90E2;
+            padding: 10px;
+            color: white;
+            text-align: center;
+            animation: fadeIn 2s;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav a:hover {
+            color: #FFC107;
+        }
+        .game-selection {
+            margin: 20px;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            animation: slideIn 1s;
+        }
+        .game {
+            padding: 10px;
+            background: #e7f3ff;
+            border-radius: 5px;
+            margin: 10px 0;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+        .game:hover {
+            transform: translateY(-3px);
+            background: #d0e3ff;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #4A90E2;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-20px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Unblocked Games</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
+    <div class="game-selection" id="home">
+        <h2>Select Your Game</h2>
+        <div class="game" onclick="openGame('https://examplegame.com')">Fun Game 1</div>
+        <div class="game" onclick="openGame('https://anotherexamplegame.com')">Fun Game 2</div>
+        <div class="game" onclick="openGame('https://yetanotherexamplegame.com')">Fun Game 3</div>
+    </div>
+
+    <footer>
+        <p>&copy; 2023 Unblocked Games. All rights reserved.</p>
+    </footer>
+
+    <script>
+        function openGame(url) {
+            // Open the game in a new tab
+            window.open(url, '_blank');
+        }
+    </script>
+</body>
+</html>
